plugins {
    id 'java'
    id 'io.qameta.allure' version '2.11.2'
}

group = 'com.example'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    testImplementation 'io.qameta.allure:allure-junit5:2.24.0'

    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'org.slf4j:slf4j-simple:2.0.9'
}

ext {
    browser = project.hasProperty('browser') ? project.browser : 'chrome'
}

test {
    useJUnitPlatform()

    systemProperty 'browser', project.findProperty('browser') ?: 'chrome'

    jvmArgs = [
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    ]

    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
}